Added actual icons for the bottom bar and changes in TimerScreen The BottomNavigation Bar active and normal icons are added. Added UIServiceController which helps us with the controls for the timer. TimerViewModel is just a holder for the UIServiceController but other functionalities will be added latter.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <dimen name="scaffold_padding">16dp</dimen>
   <dimen name="settings_card_padding">16dp</dimen>
   <dimen name="menu_option_padding">8dp</dimen>
+  <dimen name="timer_watch_padding">20dp</dimen>
 </resources>
