Added KeepScreenOnButton and replaces string with string resources. TimerScreen spacing is added as a dimen value. TimerModeControls and TimerModeBanner strings are replaces with string resource. KeepScreenOnButton will keep the screen on adding a flag to the activity window.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,5 @@
   <dimen name="settings_card_padding">16dp</dimen>
   <dimen name="menu_option_padding">8dp</dimen>
   <dimen name="timer_watch_padding">20dp</dimen>
+  <dimen name="timer_spacing">20dp</dimen>
 </resources>
