--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:aapt="http://schemas.android.com/aapt"
   android:width="108dp"
   android:height="108dp"
-  android:viewportWidth="108"
-  android:viewportHeight="108">
-  <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-    <aapt:attr name="android:fillColor">
-      <gradient
-        android:endX="85.84757"
-        android:endY="92.4963"
-        android:startX="42.9492"
-        android:startY="49.59793"
-        android:type="linear">
-        <item
-          android:color="#44000000"
-          android:offset="0.0" />
-        <item
-          android:color="#00000000"
-          android:offset="1.0" />
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-    android:fillColor="#FFFFFF"
-    android:fillType="nonZero"
-    android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-    android:strokeWidth="1"
-    android:strokeColor="#00000000" />
+  android:viewportWidth="1024"
+  android:viewportHeight="1024">
+  <group
+    android:scaleX="0.48"
+    android:scaleY="0.48"
+    android:translateX="266.24"
+    android:translateY="266.24">
+    <path
+      android:fillColor="#F39A2B"
+      android:pathData="M597.7,480.8L390.8,334c-22.2,-15.8 -53,-10.5 -68.8,11.7l-2,2.9c-15.8,22.2 -10.5,53 11.7,68.8l206.9,146.8c22.2,15.8 53,10.5 68.8,-11.7l2,-2.9c15.8,-22.2 10.5,-53 -11.7,-68.8z" />
+    <path
+      android:fillColor="#E5594F"
+      android:pathData="M585.1,423.4l-2.9,-2c-22.2,-15.8 -53,-10.5 -68.8,11.7L279,763.5c-15.8,22.2 -10.5,53 11.7,68.8l2.9,2c22.2,15.8 53,10.5 68.8,-11.7l234.4,-330.4c15.8,-22.2 10.5,-53 -11.7,-68.8z" />
+    <path
+      android:fillColor="#4A5699"
+      android:pathData="M891.7,525.1c-0.4,50.1 -8.1,91.8 -27.5,142.5 -13.2,34.6 -44.2,82.2 -70.5,111.1 -63,69.3 -152.5,113.3 -240.8,121.6 -100.8,9.5 -189.6,-17.5 -271.3,-78.6 7.7,5.7 -7.5,-6.4 -7.1,-6 -4.6,-3.8 -9,-7.8 -13.4,-11.8 -8.8,-8 -17.1,-16.5 -25.2,-25.2 -18.1,-19.4 -26.2,-30.5 -41.4,-54.9 -27.1,-43.3 -40.7,-80.3 -51,-132.5 -4,-20.4 -5.4,-39.8 -5.6,-66.2 -0.5,-73.3 -114.3,-73.4 -113.8,0 1.6,222.5 154.1,420.1 370.1,475.7 216.5,55.7 449,-49.3 553.9,-245.5 37.8,-70.7 56.7,-150.2 57.3,-230.2 0.5,-73.4 -113.2,-73.3 -113.8,0z" />
+    <path
+      android:fillColor="#C45FA0"
+      android:pathData="M137.9,501.5c0.4,-50.1 8.1,-91.8 27.5,-142.5 13.2,-34.6 44.2,-82.2 70.5,-111.1 63,-69.3 152.5,-113.3 240.8,-121.6 100.8,-9.5 189.6,17.5 271.3,78.6 -7.7,-5.7 7.5,6.4 7.1,6 4.6,3.8 9,7.8 13.4,11.8 8.8,8 17.1,16.5 25.2,25.2 18.1,19.4 26.2,30.5 41.4,54.9 27.1,43.3 40.7,80.3 51,132.5 4,20.4 5.4,39.8 5.6,66.2 0.5,73.3 114.3,73.4 113.8,0 -1.6,-222.5 -154.1,-420.1 -370.1,-475.7 -216.5,-55.7 -449,49.3 -553.9,245.5 -37.8,70.7 -56.7,150.2 -57.3,230.2 -0.5,73.4 113.2,73.3 113.8,0z" />
+  </group>
 </vector>
