--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -4,6 +4,10 @@
   <style name="Theme.TimeManagementApp" parent="android:Theme.Material.Light.NoActionBar">
     <item name="android:windowTranslucentStatus">false</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
-    <item name="android:background">@color/surface</item>
+    <item name="android:windowSplashScreenBackground">@color/surface</item>
+    <item name="android:windowSplashScreenAnimatedIcon">
+      @drawable/ic_launcher_foreground
+    </item>
+    <item name="android:windowSplashScreenIconBackgroundColor">@color/surface_variant</item>
   </style>
 </resources>
