Work on the Statistics Screen The Statistics Screen has a tabview which provides session HighLightCard information according to the tab selected, the main structure don't change a bit only the data. Renamed field SESSION_OPTION to SESSION_DURATION in AppDataBase and added the schema's for the room. The Di modules are separated according to the scope that they provide AppModule for SingleTon, TimerServiceModule for service and RepositoryModule for view-model scoped. SessionDurationOption.kt is renamed to DurationOption. StatisticsRepository provides the methods to be read by the view-model this class be updated later. StatisticsTabRow provides tabs of all ,weekly and today's.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,4 +5,6 @@
   <dimen name="menu_option_padding">8dp</dimen>
   <dimen name="timer_watch_padding">20dp</dimen>
   <dimen name="timer_spacing">20dp</dimen>
+  <dimen name="timer_button_spacing">16dp</dimen>
+  <dimen name="statistics_item_spacing">8dp</dimen>
 </resources>
