Corrections in Timer and Settings. The timer-duration in TimerScreen is collected as a normal flow. Added Changes to the SettingsScreen not renamed a few fields properly. KeepScreenOnButton now has a callback that can be used by other composable, A dismiss action is added which helps to dismiss the timer notification when it's finished. Properly structured SessionService all flow listener has been put to different functions improving readability. Cross-fade animation added to TimerModeBanner. Renamed SessionTimerModule.kt to TimerServiceModule. Added some k-docs for TimerWatch

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <!--  Common-->
   <dimen name="scaffold_padding">16dp</dimen>
-  <dimen name="settings_card_padding">16dp</dimen>
-  <dimen name="menu_option_padding">8dp</dimen>
+  <!--  Settings-->
+  <dimen name="settings_card_padding">8dp</dimen>
+  <dimen name="menu_item_padding">6dp</dimen>
+  <dimen name="settings_section_padding">8dp</dimen>
+  <!--  Timer-->
   <dimen name="timer_watch_padding">20dp</dimen>
   <dimen name="timer_spacing">20dp</dimen>
   <dimen name="timer_button_spacing">16dp</dimen>
+  <dimen name="mode_padding">16dp</dimen>
+  <!--  Statistics-->
   <dimen name="statistics_item_spacing">8dp</dimen>
 </resources>
