Corrected The Graph and removed unwanted filed from SessionInfoEntity. The Graph is again repaired seems a quite better to its previous version. Removed at field from SessionInfoEntity as it was useless. Added a fake database in case it might be needed later. Corrected error for weekly report didn't consider the empty list to get the minimum off.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -14,4 +14,5 @@
   <!--  Statistics-->
   <dimen name="statistics_item_spacing">8dp</dimen>
   <dimen name="statistics_graph_padding">16dp</dimen>
+  <dimen name="statistics_header_padding">8dp</dimen>
 </resources>
