Some Ui Changes in the Timer Screen TimerModeBanner now looks good with a bit of animations. The ActionController for the timer its added in the position for the FAB. Some Other Ui Bases updated to the TimerScreen. Not extending it much the Ui looks clean enough.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -10,7 +10,7 @@
   <dimen name="timer_watch_padding">20dp</dimen>
   <dimen name="timer_spacing">20dp</dimen>
   <dimen name="timer_button_spacing">16dp</dimen>
-  <dimen name="mode_padding">16dp</dimen>
+  <dimen name="timer_mode_padding">8dp</dimen>
   <!--  Statistics-->
   <dimen name="statistics_item_spacing">8dp</dimen>
   <dimen name="statistics_graph_padding">16dp</dimen>
