--- a/app/src/main/res/values-night-v31/colors.xml
+++ b/app/src/main/res/values-night-v31/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="surface">@color/material_dynamic_neutral10</color>
-  <color name="surface_variant">@color/material_dynamic_neutral_variant30</color>
+  <color name="primary_container">@android:color/system_accent1_700</color>
+  <color name="on_primary_container">@android:color/system_accent1_100</color>
+  <color name="background">@android:color/system_neutral1_1000</color>
 </resources>
