--- a/app/src/main/res/values-v33/themes.xml
+++ b/app/src/main/res/values-v33/themes.xml
@@ -2,10 +2,12 @@
 <resources>
 
   <style name="Theme.TimeManagementApp" parent="android:Theme.Material.Light.NoActionBar">
-    <item name="android:statusBarColor">@android:color/transparent</item>
     <item name="android:windowTranslucentStatus">false</item>
-    <item name="android:windowSplashScreenBackground">@color/surface</item>
+    <item name="android:statusBarColor">@android:color/transparent</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
+    <item name="android:windowSplashScreenBackground">@color/background</item>
     <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+    <item name="android:windowSplashScreenIconBackgroundColor">@color/ic_launcher_background</item>
     <item name="android:windowSplashScreenBehavior">icon_preferred</item>
   </style>
 </resources>
