--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,5 +4,14 @@
   <style name="Theme.TimeManagementApp" parent="android:Theme.Material.Light.NoActionBar">
     <item name="android:windowTranslucentStatus">false</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
+    <item name="android:background">@android:color/transparent</item>
   </style>
+
+  <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+    <item name="windowSplashScreenBackground">@color/background</item>
+    <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+    <item name="postSplashScreenTheme">@style/Theme.TimeManagementApp</item>
+  </style>
+
 </resources>
